--- a/GRID/index.html
+++ b/GRID/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="gridParent">
         <div class="item item-1">Item 1</div>
-        <div class="item item-2">Item 2</div>
+        <div class="item item-2">Item 2 , Rabi Anando Sarkar</div>
         <div class="item item-3">Item 3</div>
         <div class="item item-4">Item 4</div>
         <div class="item item-5">Item 5</div>
