--- a/ANIMATION/EXERCISE/index.html
+++ b/ANIMATION/EXERCISE/index.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <a class="anc" href="#">Listen Now</a>
-    </div>
+    <img src="output-onlinegiftools.gif" alt="mario"/>
 </body>
 </html>
