--- a/BONUS/CLIP-PATH/index.html
+++ b/BONUS/CLIP-PATH/index.html
@@ -7,8 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <a class="anc" href="#">Listen Now</a>
-    </div>
+    <h1>CSS CLIP PATH</h1>
+    <img src="imageFour.jpg" alt="image"/>
 </body>
 </html>
