--- a/TRANSITIONS/EXERCISE/index.html
+++ b/TRANSITIONS/EXERCISE/index.html
@@ -7,8 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <a class="anc" href="#">Listen Now</a>
+    <div class="container">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
     </div>
 </body>
 </html>
