--- a/ANIMATION/index.html
+++ b/ANIMATION/index.html
@@ -7,8 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <a class="anc" href="#">Listen Now</a>
+    <div class="container">
+        <h1>CSS Animation</h1>
+        <div class="box"></div>
     </div>
 </body>
 </html>
