--- a/NEW-FEATURES/REMAINING/index.html
+++ b/NEW-FEATURES/REMAINING/index.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <a class="anc" href="#">Listen Now</a>
-    </div>
+    <h1>CSS COURSE</h1>
 </body>
 </html>
