--- a/PROJECTS/MAJOR/index.html
+++ b/PROJECTS/MAJOR/index.html
@@ -28,13 +28,13 @@
           </a>
         </div>
         <nav class="navbar">
-          <ul>
-            <li class="nav-item"><a class="nav-link" href="/"> home</a></li>
-            <li class="nav-item"><a class="nav-link" href="/"> about</a></li>
-            <li class="nav-item"><a class="nav-link" href="/"> contact</a></li>
-            <li class="nav-item"><a class="nav-link" href="/"> blog</a></li>
-            <li class="nav-item"><a class="nav-link" href="/"> contact</a></li>
-          </ul>
+            <ul>
+              <li class="nav-item"><a class="nav-link" href="index.html"> home</a></li>
+              <li class="nav-item"><a class="nav-link" href="about.html"> about</a></li>
+              <li class="nav-item"><a class="nav-link" href="service.html"> service</a></li>
+              <li class="nav-item"><a class="nav-link" href="blog.html"> blog</a></li>
+              <li class="nav-item"><a class="nav-link" href="contact.html"> contact</a></li>
+            </ul>
         </nav>
       </div>
     </header>
